--- a/src/bootstrap/superhero/bootstrap.css
+++ b/src/bootstrap/superhero/bootstrap.css
@@ -69,7 +69,7 @@ body {
   line-height: 1.5;
   color: #EBEBEB;
   text-align: left;
-  background-color: #2B3E50;
+  background-color :#EBEBEB;
 }
 
 [tabindex="-1"]:focus {
@@ -10805,3 +10805,40 @@ label,
 .modal-header .close:hover, .modal-header .close:focus, .modal-footer .close:hover, .modal-footer .close:focus {
   opacity: 1;
 }
+
+@font-face {
+  font-family: 'din';
+  src: url('../../assets/fonts/DINNextRoundedLTPro-Light.eot?#iefix') format('embedded-opentype'),  url('../../assets/fonts/DINNextRoundedLTPro-Light.otf')  format('opentype'),
+       url('../../assets/fonts/DINNextRoundedLTPro-Light.ttf')  format('truetype'), url('../../assets/fonts/DINNextRoundedLTPro-Light.svg#DINNextRoundedLTPro-Light') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'din';
+  src: url('../../assets/fonts/DINNextRoundedLTPro-Light.eot?#iefix') format('embedded-opentype'),  url('../../assets/fonts/DINNextRoundedLTPro-Light.otf')  format('opentype'),
+       url('../../assets/fonts/DINNextRoundedLTPro-Light.ttf')  format('truetype'), url('../../assets/fonts/DINNextRoundedLTPro-Light.svg#DINNextRoundedLTPro-Light') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+ font-family: 'dinBold';
+ src: url('../../assets/fonts/DINNextRoundedLTPro-Bold.otf')  format('opentype'), url("../../assets/fonts/DINNextRoundedLTPro-Bold.ttf") format("truetype");
+}
+
+.header{
+  font-family: 'dinBold';
+}
+.header-second{
+ font-family: 'din';
+}
+
+.text-din{
+  font-family: 'din'
+}
+
+.text-dinBold{
+  font-family: 'dinBold'
+}
+
