--- a/src/bootstrap/styles.css
+++ b/src/bootstrap/styles.css
@@ -664,6 +664,7 @@ md-dialog .md-dialog-content {
   padding-right:30px;
   padding-left:30px;
   padding-bottom:30px;
+  padding-top: 30px;
   box-shadow: 10px 10px 5px #888888;
   display: table;
   margin: 0 auto;
