Se agrega simple validate

--- a/src/bootstrap/yeti/bootstrap.css
+++ b/src/bootstrap/yeti/bootstrap.css
@@ -11038,3 +11038,11 @@ label,
   font-family: 'dinBold'
 }
 
+
+
+label {
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
