--- a/src/bootstrap/yeti/bootstrap.css
+++ b/src/bootstrap/yeti/bootstrap.css
@@ -2037,7 +2037,9 @@ pre code {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ccc;
-  border-radius: 0;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2622,6 +2624,7 @@ fieldset:disabled a.btn {
   color: #fff;
   background-color: #008cba;
   border-color: #008cba;
+  border-radius: 4px;
 }
 
 .btn-primary:hover {
