Se agrega para configuracion de SEO

--- a/src/assets/bootstrap/styles.css
+++ b/src/assets/bootstrap/styles.css
@@ -26,6 +26,7 @@ src: url('../fonts/DINNextRoundedLTPro-Bold.otf')  format('opentype'), url("../f
     padding-right: 15px !important;
   }
 
+  /*
   .caja-imagen-robo {
     background-image: url("../img/robo-wide.jpg") !important;
   }
@@ -61,6 +62,7 @@ src: url('../fonts/DINNextRoundedLTPro-Bold.otf')  format('opentype'), url("../f
   .caja-imagen-abuso {
     background-image: url("../img/abuso-wide.jpg") !important;
   }
+  */
 }
 
 html {
